cleaned up Sass; improved html semantics;

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
         </a>
       </div>
       <div class="project-description">
-        <a href="{{ project.url | prepend: site.baseurl }}"><strong>{{ project.title }}</strong></a>
+        <a href="{{ project.url | prepend: site.baseurl }}"><h3>{{ project.title }}</h3></a>
         <p>{{ project.short-description }}</p>
       </div>
     </div>
