more header work.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
+ishome: 1
 ---
 
 <div class="home">
-
   <div class="work">
     <h2>My Work</h2>
     {% for project in site.portfolio limit:3 %}
