--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ ishome: 1
             </time>
           </header>
           <p>
-            {{ post.excerpt | | strip_html | strip_newlines | truncate: 120 }}
+            {{ post.excerpt | strip_html | strip_newlines | truncate: 120 }}
           </p>
           <a href="{{ post.url | prepend: site.baseurl }}">
             {{ site.config.str_continue_reading }}
