Updated header. Animated logo.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ ishome: 1
 ---
 
   <section>
-    <h2>Blog Posts</h2>
+    <h2 class="text-center">Blog Posts</h2>
     <div class="l-listing">
       {% for post in site.posts limit:4 %}
       <article>
@@ -32,7 +32,7 @@ ishome: 1
     </p>
   </section>
   <section>
-    <h2>My Work</h2>
+    <h2 class="text-center">My Work</h2>
     <div class="l-listing">
     {% for project in site.portfolio limit:2 %}
     <article class="feature">
