--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@ ishome: 1
   <section>
     <h2 class="text-center">My Work</h2>
     <div class="l-listing">
-    {% for project in site.portfolio limit:2 %}
+    {% assign revPortfolio = (site.portfolio | sort: 'launched') | reverse %}
+    {% for project in revPortfolio limit: 2 %}
     <article class="feature">
       <div class="feature__image">
         <a href="{{ project.url | prepend: site.baseurl }}">
