--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 layout: home
 ishome: 1
 ---
-
   <section>
-    <h2 class="text-center">Blog Posts</h2>
+    <h2>Allow me to reintroduce myself</h2>
+    <p></p>
+    <h3>Check it out</h3>
+    <p>
+      <a href="/work">More projects</a>
+    </p>
+  </section>
+  <section>
+    <h2>Latest writing</h2>
     <div class="l-listing">
-      {% for post in site.posts limit:4 %}
+      {% for post in site.posts limit:1 %}
       <article>
         <header>
           <h3>
@@ -19,35 +26,13 @@ ishome: 1
           </time>
         </header>
         <p>
-          {{ post.excerpt | strip_html | strip_newlines | truncate: 120 }}<br/>
+          {{ post.excerpt | strip_html | strip_newlines | truncate: 240 }}<br/>
           <a href="{{ post.url | prepend: site.baseurl }}">{{ site.meta.str_read_more }}</a>
         </p>
       </article>
       {% endfor %}
     </div>
     <p>
-      <a href="/blog">More blog posts</a>
-    </p>
-  </section>
-  <section>
-    <h2 class="text-center">My Work</h2>
-    <div class="l-listing">
-    {% assign revPortfolio = site.portfolio | sort:"launched" | reverse %}
-    {% for project in revPortfolio limit: 2 %}
-    <article class="feature">
-      <div class="feature__image">
-        <a href="{{ project.url | prepend: site.baseurl }}">
-          <img src="{{ project.thumbnail-path }}" alt="{{ project.title }}"/>
-        </a>
-      </div>
-      <div class="feature__description">
-        <a href="{{ project.url | prepend: site.baseurl }}"><h3>{{ project.title }}</h3></a>
-        <p>{{ project.short-description }}</p>
-      </div>
-    </article>
-    {% endfor %}
-    </div>
-    <p>
-      <a href="/work">More projects</a>
+      <a href="/blog">More writing</a>
     </p>
   </section>
