Homepage adjustment and content

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@ ishome: 1
 
 <div class="l-features">
   <section class="l-features__intro">
-    <h3>About</h3>
+    <h2>This me</h2>
     <p>
-      Maecenas faucibus mollis interdum. Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Nullam quis risus eget urna mollis ornare vel eu leo. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+      Greetings! I'm a web developer, husband, uncle, reluctant cat parent, and enthusiastic learner.
     </p>
+    <p><a href="/about">More about me</a></p>
   </section>
   <section class="l-features__photo">
     <img src="{{ site.baseurl }}/img/alex-bea.jpg" alt="headshot photo of Alex Bea">
@@ -38,9 +39,9 @@ ishome: 1
     </p>
   </section>
   <section class="l-features__project">
-    <h2>Project</h2>
+    <h2>Check it out</h2>
     <p>
-      Maecenas faucibus mollis interdum. Vestibulum id ligula porta felis euismod semper. Maecenas faucibus mollis interdum. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Nullam quis risus eget urna mollis ornare vel eu leo. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+      I recently whipped up a little bookmarklet to make website support easier for devs like me who need to view production issues in local environments. Check out <a href="/projects/#localhost-swap">Localhost Swap</a>
     </p>
   </section>
 </div>
