Changes heading since apparently cutsiness looks like a typo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ ishome: 1
 
 <div class="l-features">
   <section class="l-features__intro">
-    <h2>This me</h2>
+    <h2>This is me</h2>
     <p>
       Greetings! I'm a web developer, husband, uncle, reluctant cat parent, and enthusiastic learner.
     </p>
