Changes work to HTML file

--- a/work.html
+++ b/work.html
@@ -1,13 +1,12 @@
 ---
 layout: listing
-title: My Work
+title: Case Studies
 permalink: /work/
 ---
 
-Check out some of my work here. They're a small reflection of my [years of experience]({{ site.meta.linkedin }}) with web development, project management, and digital strategy both within organizations and at agencies. [Let's talk.](mailto:alex.bea@gmail.com)
-
-## Case Studies
-
+<p>
+Check out some of my work here. They're a small reflection of my <a href="{{ site.meta.linkedin }}">years of experience</a> with web development, project management, and digital strategy both within organizations and at agencies. <a href="mailto:alex.bea@gmail.com">Let's talk.</a>
+</p>
 {% assign revPortfolio = site.portfolio | sort:"launched" | reverse %}
 {% for project in revPortfolio %}
 <article class="c-teaser c-teaser--media">
