Adds Philly Bike History project; link underline color adjust

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ ishome: 1
   <section class="l-features__project">
     <h2>Check it out</h2>
     <p>
-      I recently whipped up a little bookmarklet to make website support easier for devs like me who need to view production issues in local environments. Check out <a href="/projects/#localhost-swap">Localhost Swap</a>
+      To exercise and gain skills around Node.js, MongoDB, unit testing with Mocha, and building APIs, I built an API that organizes and delivers historical data for Philadelphia's Indego bike share and city weather. Check out <a href="/projects/#bike-history">Philly Bike History</a>.
     </p>
   </section>
 </div>
