--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ ishome: 1
     <p><a href="/about">More about me</a></p>
   </section>
   <section class="l-features__photo">
-    <img src="{{ site.baseurl }}/img/alex-bea.jpg" alt="headshot photo of Alex Bea">
+    <img src="{{ site.baseurl }}/img/alex-bea-small.jpg" alt="headshot photo of Alex Bea">
   </section>
   <section class="l-features__writing">
     <h2>Latest writing</h2>
