Content updates for Indego History project

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ ishome: 1
   <section class="c-features__feature c-features__project">
     <h2>Check it out</h2>
     <p>
-      To exercise and gain skills around Node.js, MongoDB, unit testing with Mocha, and building APIs, I built an API that organizes and delivers historical data for Philadelphia's Indego bike share and city weather. Check out <a href="/projects/#bike-history">Philly Bike History</a>.
+      I built an API and basic interface that organizes and delivers historical data for Philadelphia's Indego bike share and city weather using Vue.js, Node.js, MongoDB, and unit testing with Mocha. Check out <a href="/projects/#bike-history">Philly Bike History</a>.
     </p>
   </section>
 </div>
