Updates about and home pages

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@ ishome: 1
     </p>
   </section>
   <section class="c-features__feature c-features__project">
-    <h2>Check it out</h2>
+    <h2>Featured side project</h2>
     <p>
-      I built an API and basic interface that organizes and delivers historical data for Philadelphia's Indego bike share and city weather using Vue.js, Node.js, MongoDB, and unit testing with Mocha. Check out <a href="/projects/#bike-history">Philly Bike History</a>.
+      An API and basic interface that organizes and delivers historical data for Philadelphia's Indego bike share and city weather using Vue.js, Node.js, MongoDB, and unit testing with Mocha. Check out <a href="/projects/#bike-history">Philly Bike History</a>.
     </p>
   </section>
 </div>
