Removes the featured project

--- a/index.html
+++ b/index.html
@@ -38,10 +38,5 @@ ishome: 1
       <a href="/blog">More writing</a>
     </p>
   </section>
-  <section class="c-features__feature c-features__project">
-    <h2>Featured side project</h2>
-    <p>
-      An API and basic interface that organizes and delivers historical data for Philadelphia's Indego bike share and city weather using Vue.js, Node.js, MongoDB, and unit testing with Mocha. Check out <a href="/projects/#bike-history">Philly Bike History</a>.
-    </p>
-  </section>
+  <section class="c-features__feature c-features__project"></section>
 </div>
